--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!--section2 Features-->
       <section class="about">
         <!-- <h2 class="visually-hidden">Features</h2> -->
-        <h2 hidden>Features</h2>
+        <h2 hidden class="visually-hidden">Features</h2>
         <ul class="list-other list">
           <li class="about-item">
             <h3 class="header-three">Strategy</h3>
@@ -125,7 +125,7 @@
               width="264"
             />
             <h3 class="header-three">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="ourteam-paragraf">Product Designer</p>
           </li>
           <li  class="ourteam-list-item">
             <img
@@ -133,8 +133,8 @@
               alt="Photo Tom Ford"
               width="264"
             />
-            <h3 class="header_three">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="header-three">Tom Ford</h3>
+            <p class="ourteam-paragraf">Frontend Developer</p>
           </li>
           <li  class="ourteam-list-item">
             <img
@@ -143,7 +143,7 @@
               width="264"
             />
             <h3 class="header-three">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="ourteam-paragraf">Marketing</p>
           </li>
           <li  class="ourteam-list-item" >
             <img
@@ -152,7 +152,7 @@
               width="264"
             />
             <h3 class="header-three">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="ourteam-paragraf">UI Designer</p>
           </li>
         </ul>
       </section>
