--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <main>
       <section>
         <!-- <h1 class="visually-hidden">List of work</h1> -->
-        <h1 hidden>List of work</h1>
+        <h1 hidden class="visually-hidden">List of work</h1>
         <!-- <h2 class="visually-hidden">Type of Works and filter</h2> -->
         <ul class="list-other list">
           <li><button type="button" class="btn">All</button></li>
@@ -71,7 +71,7 @@
             </a>
           </li>
           <li>
-             <a href="">
+             <a href="" class="link-works link">
             <img
               src="./images/section5/Cashless.jpg"
               alt="Cashless Payment"
@@ -82,7 +82,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-works link">
             <img
               src="./images/section5/Meditation.jpg"
               alt="Meditation App"
@@ -94,7 +94,7 @@
           </li>
 
           <li>
-            <a href="">
+            <a href="" class="link-works link">
             <img
               src="./images/section5/Taxi.jpg"
               alt="Taxi Service "
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-works link">
             <img
               src="./images/section5/ScreenIllustr.jpg"
               alt="Screen Illustrations"
@@ -116,7 +116,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-works link">
             <img
               src="./images/section5/Courses.jpg"
               alt="Online Courses"
@@ -127,7 +127,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-works link">
             <img
               src="./images/section5/StoriesConcept.jpg"
               alt="Instagram Stories Concept"
@@ -138,7 +138,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-works link">
             <img
               src="./images/section5/FoodOrganic.jpg"
               alt="Organic Food"
@@ -149,7 +149,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-works link">
             <img
               src="./images/section5/Cofee.jpg"
               alt="Fresh Coffee"
