--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <!-- list -->
         <ul class="list-nav list">
           <li>
-            <a href="./index.html" class="link-header link">Studio</a>
+            <a href="./index.html" class="link-header link-heder-color link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link-header link ">Portfolio</a>
+            <a href="./portfolio.html" class="link-header link-heder-color link ">Portfolio</a>
           </li>
           <li><a href="" class="link-header link">Contacts</a></li>
         </ul>
