--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <!--section2 Features-->
       <section class="about">
         <!-- <h2 class="visually-hidden">Features</h2> -->
-        <h2 hidden class="visually-hidden color-header">Features</h2>
+        <h2 hidden class="visually-hidden">Features</h2>
         <ul class="list-other list">
-          <li class="about-item">
+          <li class="about-item">   
             <h3 class="header-three">Strategy</h3>
             <p class="about-text">
               Our goal is to identify the business problem to walk away with the
